# docker_test

docker_gpu/: README_DEVCONTAINER.md  docker-compose.yml  docker_compose_commands.md  dockerfile  gpu_docker_vscode_git_setup.md
docker_gpu/.devcontainer/: devcontainer.json
docker_gpu/debugfiles/: gpu_count.py
docker_gpu/mlruns/0/: meta.yaml
fastapi-docker/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.txt
ml-flow_test/: train.py
update_poetry/: Dockerfile  docker-compose.yml  mk_poetry_files.sh
